# order-insensitive-compare

./: Cargo.toml
benches/: benchmark.rs
src/: lib.rs
