[package]
name = "order-insensitive-compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false
