[package]
name = "order-insensitive-compare"
rust_version = "1.56.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7"
blake3 = "1.1"
rayon = "1.5"
sha2 = { version = "0.9", features = ["asm"] }

[dev-dependencies]
criterion = "0.3"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false
